Name:          hackern-storage
Version:       0.1
Cabal-Version: >=1.10
Build-Type:    Simple
Author:        Yin Yu
Maintainer:    yxonic@gmail.com
Stability:     experimental
Description:   Simple NoSQL key-value data storage model for HaLVM.
Category:      System

Library
  Build-depends:    halfs,
                    base >= 4 && < 5,
                    containers,
                    binary,
                    mtl,
                    bytestring
  Default-language: Haskell2010
  Exposed-modules:  Hackern.Storage.KV
